# solanaswift

./: .dockerignore  .gitignore  Anchor.toml  Dockerfile  HOSTING_ALTERNATIVES.md  README.md  build.sh  dev.sh  package-lock.json  package.json  railway.toml  render.yaml  tsconfig.json  vercel.json
frontend/: .env.local  .env.local.example  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: _error.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @coral-xyz.js  @noble.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @wallet-standard.js  base-x.js  bigint-buffer.js  bignumber.js.js  bindings.js  borsh.js  bs58.js  buffer-layout.js  bufferutil.js  (+31 more)
frontend/src/__mocks__/: solana-web3.js  uuid.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useProgram.ts
frontend/src/lib/: anchor.ts  types.ts
frontend/src/providers/: WalletProvider.tsx
frontend/src/stores/: poolStore.ts
programs/solanaswift/: Cargo.toml
programs/solanaswift/src/: error.rs  lib.rs  state.rs
programs/solanaswift/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs  update_fees.rs
scripts/: deploy.sh  setup.sh
tests/: solanaswift.ts
(+17 files in other folders)
