[package]
name = "solanaswift"
version = "0.1.0"
description = "SolanaSwift AMM with adaptive fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanaswift"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
uint = "0.9"